# Sol-Scaffold

./: .gitignore  ACT.md  GEMINI.md  GOVERNANCE_PLAN.md  PLAN.md  PLAN_INTEGRATION_SCAFFOLD.md  README.md  RESEARCH.md  ROADMAP.md  TEST.md  TODO.md  jest.config.cjs  package-lock.json  package.json
.github/workflows/: ci.yml
src/: index.ts
src/commands/: clean.ts  doctor.ts  integration.ts  list.ts  new.ts  sync.ts
src/utils/: files.ts  paths.ts  programs.ts
templates/_shared/: tsconfig.json
templates/_shared/app/: package.json
templates/governance/: Anchor.toml  README.md  package.json
templates/governance/app/: package.json
templates/governance/tests/: governance.ts
templates/integration/fixtures/: readme.md
templates/integration/scenarios/: basic.test.ts
templates/integration/utils/: setup.ts  validator.ts
templates/lending/: .gitignore  Anchor.toml  README.md  package.json
templates/lending/app/: package.json
templates/lending/programs/solana-lending-dapp/: Cargo.toml  Xargo.toml
templates/lending/programs/solana-lending-dapp/src/: lib.rs
templates/lending/tests/: lending.d.ts  lending.d.ts.map  lending.js  lending.js.map  lending.ts
templates/staking/: Anchor.toml  README.md
templates/staking/programs/solana-staking-dapp/: Cargo.toml  Xargo.toml
templates/staking/programs/solana-staking-dapp/src/: lib.rs
templates/staking/tests/: staking.d.ts.map  staking.js  staking.js.map  staking.ts
templates/swap/: Anchor.toml  README.md  package.json
templates/swap/app/: package.json
test/commands/: integration.test.ts  new.test.ts
(+53 files in other folders)
