[package]
name = "solana-lending-dapp"
version = "0.1.0"
description = "Solana Lending Template"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_lending_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
