[package]
name = "solana-staking-dapp"
version = "0.1.0"
description = "Solana Staking Template"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_staking_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
